syntax = "proto3";

package mi8;

option go_package = "mi8/proto";

import "google/protobuf/empty.proto";

// The MI8 service definition.
service MI8Service {
  // Get latest news
  rpc GetLatestNews (GetLatestNewsRequest) returns (NewsList) {}
  
  // Get latest news by city
  rpc GetLatestNewsInCity (GetLatestNewsInCityRequest) returns (NewsList) {}

  // Create news
  rpc CreateNews (News) returns (google.protobuf.Empty) {}

  // Get city scores
  rpc GetCityScore (GetCityScoreRequest) returns (CityScore) {}

  // Get top cities
  rpc GetTopCities (GetTopCitiesRequest) returns (CityScoreList) {}
}

message News {
  string name = 1;
  string source = 2;
  string date = 3;
  repeated string tags = 4;
  string city = 5;
  string country = 6;
}

message GetLatestNewsRequest {
  int32 limit = 1;
}

message GetLatestNewsInCityRequest {
  string city = 1;
  int32 limit = 2;
}

message NewsList {
  repeated News news = 1;
}

message GetCityScoreRequest {
  string city = 1;
}

message GetTopCitiesRequest {
  int32 limit = 1;
}

message CityScore {
  string city = 1;
  string country = 2;
  int32 quality_of_life = 3;
  int32 safety = 4;
  int32 economy = 5;
  int32 culture = 6;
  string last_updated = 7;
}

message CityScoreList {
  repeated CityScore scores = 1;
}
